--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="public/css/adminlte.min.css">
 
 </head>
 
@@ -20,7 +20,7 @@
   <div class="wrapper">
 
     <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="background-image: url(/image/ddd.jpg);">
+    <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="background-image: url(public/image/ddd.jpg);">
       <!-- Left navbar links -->
       <ul class="navbar-nav" >
         <li class="nav-item">
@@ -58,7 +58,7 @@
             <a href="#" class="dropdown-item">
               <!-- Message Start -->
               <div class="media">
-                <img src="/image/beat.jpg" alt="close friends" class="img-size-50 mr-3 img-circle">
+                <img src="public/image/beat.jpg" alt="close friends" class="img-size-50 mr-3 img-circle">
                 <div class="media-body">
                   <h3 class="dropdown-item-title">
                     Beat Aloha
@@ -74,7 +74,7 @@
             <a href="#" class="dropdown-item">
               <!-- Message Start -->
               <div class="media">
-                <img src="/image/pin.jpg" alt="close friends" class="img-size-50 img-circle mr-3">
+                <img src="public/image/pin.jpg" alt="close friends" class="img-size-50 img-circle mr-3">
                 <div class="media-body">
                   <h3 class="dropdown-item-title">
                     Cello Picolo
@@ -90,7 +90,7 @@
             <a href="#" class="dropdown-item">
               <!-- Message Start -->
               <div class="media">
-                <img src="/image/poppy.jpg" alt="close friends" class="img-size-50 img-circle mr-3">
+                <img src="public/image/poppy.jpg" alt="close friends" class="img-size-50 img-circle mr-3">
                 <div class="media-body">
                   <h3 class="dropdown-item-title">
                     Poppy Yns
@@ -103,7 +103,7 @@
               <!-- Message End -->
             </a>
             <div class="dropdown-divider"></div>
-            <a href="#" class="dropdown-item dropdown-footer">See All Messages</a>
+            <a href="https://www.facebook.com/messages/t/100002483854620" class="dropdown-item dropdown-footer">See All Messages</a>
           </div>
         </li>
         <!-- Notifications Dropdown Menu -->
@@ -130,7 +130,7 @@
               <span class="float-right text-muted text-sm">2 days</span>
             </a>
             <div class="dropdown-divider"></div>
-            <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
+            <a href="https://twitter.com/home" class="dropdown-item dropdown-footer">See All Notifications</a>
           </div>
         </li>
 
@@ -140,10 +140,10 @@
     <!-- /.navbar -->
 
     <!-- Main Sidebar Container -->
-    <aside class="main-sidebar sidebar-dark-primary elevation-4" style="background-image: url(/image/bk.png);">
+    <aside class="main-sidebar sidebar-dark-primary elevation-4" style="background-image: url(public/image/bk.png);">
       <!-- Brand Logo -->
-      <a href="index3.html" class="brand-link">
-        <img src="/image/logo.jpg" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <a href="index.html" class="brand-link">
+        <img src="public/image/logo.jpg" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
         <span class="brand-text font-weight-light">Admin ARAYA T.</span>
       </a>
 
@@ -152,7 +152,7 @@
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <div class="image">
-            <img src="/image/pro.jpg" class="img-circle elevation-2" alt="User Image">
+            <img src="public/image/pro.jpg" class="img-circle elevation-2" alt="User Image">
           </div>
           <div class="info">
             <a href="#" class="d-block">Araya Tarin</a>
@@ -167,7 +167,7 @@
             <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
             <li class="nav-item">
-              <a href="#" class="nav-link">
+              <a href="index.html" class="nav-link">
                 <i class="fab fa-pagelines">
                   <p>
                     Profile
@@ -176,16 +176,16 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
+              <a href="index.html" class="nav-link">
                 <i class="fab fa-pagelines">
                   <p>
-                    Picture
+                    Close Friends
                   </p>
                 </i>
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
+              <a href="index.html" class="nav-link">
                 <i class="fab fa-pagelines">  
                   <p>
                     Favorite
@@ -223,9 +223,9 @@
 
               <!-- Profile Image -->
               <div class="card card-outline">
-                <div class="card-body box-profile" style="background-image: url(/image/ddd.jpg);">
+                <div class="card-body box-profile" style="background-image: url(public/image/ddd.jpg);">
                   <div class="text-center">
-                    <img class="profile-user-img img-fluid img-circle " src="/image/pro.jpg" alt="User profile picture">
+                    <img class="profile-user-img img-fluid img-circle " src="public/image/pro.jpg" alt="User profile picture">
                   </div>
 
                   <h3 class="profile-username text-center">Araya Tarin</h3>
@@ -244,7 +244,7 @@
                   </li>
                   </ul>
 
-                  <a href="#" class="btn btn-dark btn-block " style="opacity: 80%;"><b>Follow</b></a>
+                  <a href="https://www.instagram.com/wane_anillo/?hl=en" class="btn btn-dark btn-block " style="opacity: 80%;"><b>Follow</b></a>
                 </div>
                 <!-- /.card-body -->
               </div>
@@ -255,7 +255,7 @@
                   <h3 class="card-title">About Me</h3>
                 </div>
                 <!-- /.card-header -->
-                <div class="card-body" style="background-image: url(/image/ddd.jpg);">
+                <div class="card-body" style="background-image: url(public/image/ddd.jpg);">
                   <strong><i class="fas fa-university"></i> Education</strong>
 
                   <p class="text">
@@ -344,25 +344,25 @@
                       </div>
                     </div>
                     <!-- /.card-header -->
-                    <div class="card-body p-0" style="background-image: url(/image/h.jpg);">
+                    <div class="card-body p-0" style="background-image: url(public/image/h.jpg);">
                       <ul class="users-list clearfix">
                         <li>
-                          <img src="image/pin.jpg" alt="User Image">
+                          <img src="public/image/pin.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Pinarporn Tinsuk</a>
                           <span class="users-list-date">Pin</span>
                         </li>
                         <li>
-                          <img src="image/jar.jpg" alt="User Image">
+                          <img src="public/image/jar.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Jarupa Jaiumphang</a>
                           <span class="users-list-date">Jar</span>
                         </li>
                         <li>
-                          <img src="image/poppy.jpg" alt="User Image">
+                          <img src="public/image/poppy.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Suthida Yanaso</a>
                           <span class="users-list-date">Poppy</span>
                         </li>
                         <li>
-                          <img src="image/beat.jpg" alt="User Image">
+                          <img src="public/image/beat.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Suttida Chewhakarn</a>
                           <span class="users-list-date">Beat</span>
                         </li>
@@ -386,22 +386,22 @@
                     <div class="card-body p-0">
                       <ul class="users-list clearfix">
                         <li>
-                          <img src="image/boky.jpg" alt="User Image">
+                          <img src="public/image/boky.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Pichsinee Verasutthimas</a>
                           <span class="users-list-date">Bowkylion</span>
                         </li>
                         <li>
-                          <img src="image/toy.jpg" alt="User Image">
+                          <img src="public/image/toy.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Thanwa Boonsoongnern </a>
                           <span class="users-list-date">The Toy</span>
                         </li>
                         <li>
-                          <img src="image/Bright.jpg" alt="User Image">
+                          <img src="public/image/Bright.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Vachirawit Chivaaree</a>
                           <span class="users-list-date">Bright</span>
                         </li>
                         <li>
-                          <img src="image/prem.jpg" alt="User Image">
+                          <img src="public/image/prem.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Warut Chawaritrujiwong </a>
                           <span class="users-list-date">Prem</span>
                         </li>
@@ -465,7 +465,7 @@
   <!-- ChartJS -->
   <script src="plugins/chart.js/Chart.min.js"></script>
   <!-- AdminLTE App -->
-  <script src="dist/js/adminlte.js"></script>
+  <script src="public/js/adminlte.js"></script>
 
   <script>
     $(function () {
