--- a/login.html
+++ b/login.html
@@ -12,10 +12,10 @@
   <!-- icheck bootstrap -->
   <link rel="stylesheet" href="plugins/icheck-bootstrap/icheck-bootstrap.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="public/css/adminlte.min.css">
 </head>
 
-<body class="hold-transition login-page" style="background-image: url(/image/bk.png);" >
+<body class="hold-transition login-page" style="background-image: url(public/image/bk.png);" >
 <div class="login-box">
   <div class="login-logo">
     <a href="/index.html">
@@ -67,10 +67,10 @@
 
       <div class="social-auth-links text-center mb-3">
         <p> OR </p>
-        <a href="#" class="btn btn-block btn-dark">
+        <a href="https://www.facebook.com/messages/t/100002483854620" class="btn btn-block btn-dark">
           <i class="fab fa-facebook mr-2"></i> Sign in using Facebook
         </a>
-        <a href="#" class="btn btn-block btn-dark">
+        <a href="https://www.google.co.th/webhp?tab=rw" class="btn btn-block btn-dark">
           <i class="fab fa-google-plus mr-2"></i> Sign in using Google+
         </a>
       </div>
@@ -93,6 +93,6 @@
 <!-- Bootstrap 4 -->
 <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
-<script src="dist/js/adminlte.min.js"></script>
+<script src="public/js/adminlte.min.js"></script>
 </body>
 </html>
